force-app/main/default/objects/AchievementIncrement__e/AchievementIncrement__e.object-meta.xml
<CustomObject>
    <label>Achievement Increment</label>
    <pluralLabel>Achievement Increments</pluralLabel>
</CustomObject>