force-app/main/default/objects/AchievementIncrement__e/fields/Achievement__c.field-meta.xml
<CustomField>
    <fullName>Achievement__c</fullName>
    <description>Achievement custom metadata type record name</description>
    <label>Achievement</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>