force-app/main/default/objects/AchievementIncrement__e/fields/Increment__c.field-meta.xml
<CustomField>
    <fullName>Increment__c</fullName>
    <description>Value that is going to be added to User Stat - Progress field</description>
    <label>Increment</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>